// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Render must match inactive() 1`] = `
<div>
  <div
    class="m-0 form-checkbox radio-inactive"
  >
    <label
      for="checkbox"
    >
      <input
        name="fantastic-name"
        type="radio"
      />
      White
    </label>
  </div>
  <div
    class="m-0 form-checkbox radio-inactive"
  >
    <label
      for="checkbox"
    >
      <input
        checked=""
        name="fantastic-name"
        type="radio"
      />
      Black
    </label>
  </div>
</div>
`;

exports[`<Radio /> Render must match regular() 1`] = `
<div>
  <div
    class="m-0 form-checkbox"
  >
    <label
      for="checkbox"
    >
      <input
        name="fantastic-name"
        type="radio"
      />
      White
    </label>
  </div>
  <div
    class="m-0 form-checkbox"
  >
    <label
      for="checkbox"
    >
      <input
        checked=""
        name="fantastic-name"
        type="radio"
      />
      Black
    </label>
  </div>
</div>
`;
